# INST414prjct

./: LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
Data/: Screentime_v_Mental_Health_Datasetf.csv  social_media_usagefnl.csv
notebooks/: DataEDA.Rmd  DataEDA.nb.html  Datasetcleaning.Rmd  Datasetcleaning.nb.html
