[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "inst414cps"
version = "0.0.1"
description = "Research project on correlation between tech usage (social media/screentime) and mental health"
authors = [
  { name = "Vhuhwavho Todani" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
requires-python = "~=3.13.0"


[tool.ruff]
line-length = 99
src = ["inst414cps"]
include = ["pyproject.toml", "inst414cps/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["inst414cps"]
force-sort-within-sections = true

